--- a/eren.html
+++ b/eren.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="www.erenjaegerprofile">
+    <link rel="stylesheet" href="eren.css">
     <link href="https://fontawesome.com">
     <script src="https://kit.fontawesome.com/1919c804c9.js" crossorigin="anonymous"></script>
     <title>Eren Yeager - Profile</title>
